# orx_template

./: README.md
android/src/jni/: Android.mk  Application.mk
android/src/main/assets/: common  orx.ini
android/src/main/java/org/orx_project/orx_template/: OrxTemplate.java
android/src/main/res/values/: strings.xml
src/: CMakeLists.txt  OrxTemplate.cpp  OrxTemplate.h  execute_in_sibling_folder.ini
working_directory/: main.ini  orx_template.ini
working_directory/common/: common.ini  soldier.ini
